# shopify-mcp

./: .env.example  .gitignore  COLLABORATION_REPORT.md  README.md  TECH_DEBT.md  architectural_tech_debt.md  conftest.py  depcheck.py  logging_config.py  pyproject.toml  requirements-audit.in  requirements-dev.txt  requirements.txt  settings.py  shopify_client.py  shopify_mcp.py  test_catalog_hygiene_offline.py  test_catalog_hygiene_operations_offline.py  test_collections_offline.py  test_collections_operations_offline.py  test_depcheck_offline.py  test_discounts_offline.py  test_discounts_operations_offline.py  test_filters_offline.py  test_gid_offline.py  test_http_offline.py  test_inventory_offline.py  test_inventory_operations_offline.py  test_lockfile_offline.py  test_log_offline.py  test_logging_config_offline.py  test_media_offline.py  test_metadata_cache_offline.py  test_naming_offline.py  test_orders_offline.py  test_orders_operations_offline.py  test_paginate_offline.py  test_products_offline.py  test_products_operations_offline.py  test_publications_offline.py  (+15 more)
.github/workflows/: test.yml
_testing/: __init__.py  fake_client.py
docs/specs/: story-10.19-sec-resolver-reflect-cap.md
shopify/: __init__.py  _cache.py  _client.py  _ids.py
shopify/operations/: __init__.py  catalog_hygiene.py  collections.py  discounts.py  inventory.py  orders.py  products.py  publications.py  webhooks.py
shopify/queries/: __init__.py  catalog_hygiene.py  collections.py  discounts.py  inventory.py  orders.py  products.py  publications.py  webhooks.py
tools/: _filters.py  _gid.py  _http.py  _log.py  _resolvers.py  _response.py  _scrub.py  _untrusted.py  _url_safety.py  _write_tool.py  catalog_hygiene.py  collections.py  discounts.py  inventory.py  media.py  orders.py  products.py  publications.py  webhooks.py
tools/media/: __init__.py  _common.py  _constants.py  _delete.py  _graphql.py  _list.py  _reorder.py  _update.py  _upload.py
validators/: naming.py  seo.py
