[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-mcp"
version = "0.1.0"
description = "Shopify MCP server — Model Context Protocol tools for Shopify Admin API."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2",
    "python-dotenv>=1.0.0,<2",
    "requests>=2.31.0,<3",
    "gql[requests]>=3.4.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "coverage>=7,<8",
]

[project.scripts]
# Installed into the venv's bin/ by `pip install -e .`. Lets Claude Desktop
# launch the server via a single command path (`.venv/bin/shopify-mcp`)
# instead of splitting across Python interpreter + script path.
shopify-mcp = "shopify_mcp:main"

[tool.setuptools]
py-modules = ["shopify_client", "shopify_mcp"]
packages = ["tools", "validators", "_testing"]

[tool.pytest.ini_options]
# test_shopify_mcp.py is a live-store smoke runner, not an offline unit test.
# It requires SHOPIFY_STORE_URL + SHOPIFY_ACCESS_TOKEN and would fail in CI
# (and locally without a configured .env). Exclude it from pytest discovery.
addopts = "--ignore=test_shopify_mcp.py"

[tool.coverage.run]
# Single source of truth for what coverage measures — consumed by both
# `coverage run` locally and the CI workflow, so the two can't drift.
# `_testing/` is intentionally excluded: it holds test doubles exercised
# only through the offline suites, not production code worth gating on.
source = ["shopify_client", "tools", "validators"]
