# Version bounds: every dep uses `>=floor,<next-major` — caps silent major-release breakage.
[build-system]
requires = ["setuptools>=61,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-mcp"
version = "0.1.0"
description = "Shopify MCP server — Model Context Protocol tools for Shopify Admin API."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2",
    "python-dotenv>=1.0.0,<2",
    "requests>=2.31.0,<3",
    "gql[requests]>=3.4.0,<4",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-json-logger>=3,<4",
    "cachetools>=5,<6",
    # HTML-safety detector (Story 10.35 / SEC-M2-sanitizer): nh3 (ammonia/Rust)
    # is the parser-based engine behind tools/_filters.html_safety_findings.
    "nh3>=0.2,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "coverage>=7,<8",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-requests>=2.31,<3",
    "types-cachetools>=5,<7",
]

[project.scripts]
# Installed into the venv's bin/ by `pip install -e .`. Lets Claude Desktop
# launch the server via a single command path (`.venv/bin/shopify-mcp`)
# instead of splitting across Python interpreter + script path.
shopify-mcp = "shopify_mcp:main"
# Dependency-drift check (Story 10.37): verifies the current interpreter has
# every dependency pyproject.toml declares. Run after pulling new deps, or
# point it at the interpreter the MCP server launches under to catch the
# boot-crash drift before it happens. Exits non-zero on drift.
shopify-mcp-check-deps = "depcheck:main"

[tool.setuptools]
py-modules = ["depcheck", "logging_config", "settings", "shopify_client", "shopify_mcp"]
packages = ["tools", "validators", "_testing", "shopify", "shopify.queries", "shopify.operations"]

[tool.pytest.ini_options]
# Live smoke runners that require SHOPIFY_STORE_URL + SHOPIFY_ACCESS_TOKEN.
# They would fail in CI (and locally without a configured .env), so they are
# excluded from default pytest discovery. CI runs `pytest test_*_offline.py`
# explicitly, so this is belt-and-suspenders for local `pytest` invocations.
addopts = "--ignore=test_shopify_mcp.py --ignore=test_webhooks.py"

[tool.coverage.run]
# Single source of truth for what coverage measures — consumed by both
# `coverage run` locally and the CI workflow, so the two can't drift.
# `_testing/` is intentionally excluded: it holds test doubles exercised
# only through the offline suites, not production code worth gating on.
source = ["depcheck", "logging_config", "settings", "shopify_client", "tools", "validators", "shopify"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["aon_mcp_log.txt"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: bugbear, SIM: simplify, C4: comprehensions, RUF: ruff-specific.
# E501 (long lines) is off: ruff format already wraps what it can, and
# literal strings/URLs that exceed the limit shouldn't fail the build.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# B011: asserts are how pytest tests work.
# RUF059: tests consistently unpack `tools, fc = _build(...)`; `fc` (FakeClient)
# is inspected in some tests and not others, and keeping the destructure
# uniform across the suite beats renaming to `_fc` per test.
"test_*.py" = ["B011", "RUF059"]
# validators/naming.py and its tests deal with en-dash separators by design,
# so RUF001/RUF002 (ambiguous-unicode) flagging the en-dashes is noise.
"validators/naming.py" = ["RUF001", "RUF002"]
"test_naming_offline.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
# Gate: every def in the `files` list below must have complete param + return
# annotations. Added tools should carry types from the first commit — mypy will
# reject the PR otherwise.
python_version = "3.10"
files = ["depcheck.py", "logging_config.py", "settings.py", "shopify_client.py", "shopify_mcp.py", "tools", "validators", "_testing", "shopify"]
ignore_missing_imports = true
disallow_untyped_defs = true
# Belt-and-suspenders: if anyone later bypasses the gate with
# `# type: ignore[no-untyped-def]` on a specific def, the body still gets checked.
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
